--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 php_flag display_startup_errors on
 php_flag display_errors on
 php_flag html_errors on
+php_flag allow_url_include on
+php_value allow_url_fopen On
